Fix style on IOS mobiles

--- a/src/components/InputForm/styles/index.css
+++ b/src/components/InputForm/styles/index.css
@@ -1,3 +1,9 @@
+
+input {
+    -webkit-appearance: none;
+    border-radius: 0px;
+}
+
 .input-form__container {
     width: 100%;
 }
@@ -20,4 +26,5 @@
 .input-form__container input:hover {
     border: 2px solid black;
 }
+
 
