--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+
+input, select { font-size: 100%; }
+input {
+    -webkit-appearance: none;
+    border-radius: 0px;
+}
